<resources>
    <string name="app_name">mime</string>

    <!-- common -->
    <string name="tx_save">保存</string>

    <!-- MimeFragment -->
    <string name="mime_title">我</string>
    <string name="tx_tab_message">消息中心</string>
    <string name="tx_tab_like">我喜欢的</string>
    <string name="tx_tab_collect">收藏集</string>
    <string name="tx_tab_buy">已购</string>
    <string name="tx_tab_boil">赞过的沸点</string>
    <string name="tx_tab_read_article">阅读过的文章</string>
    <string name="tx_tab_manager">标签管理</string>
    <string name="tx_tab_feedback">意见反馈</string>
    <string name="tx_tab_set">设置</string>
    <string name="tx_tab_value_count_1">%1$d个</string>
    <string name="tx_tab_value_count_2">%1$d本</string>
    <string name="tx_tab_value_count_3">%1$d篇</string>

    <!-- MimeInfoFragment -->
    <string name="tx_mime_follow_count">关注</string>
    <string name="tx_other_follow_count">关注者</string>
    <string name="tx_edit_mime">编辑</string>
    <string name="mime_tx_tab_trends">动态</string>
    <string name="mime_tx_tab_boil">沸点</string>
    <string name="mime_tx_tab_original_article">原创文章</string>
    <string name="mime_tx_tab_share_article">分享文章</string>
    <string name="mime_tx_tab_like_article">喜欢的文章</string>
    <string name="mime_tx_tab_follow_tab">关注的标签</string>

    <!-- EditMimeInfoFragment -->
    <string name="tx_header">头像</string>
    <string name="tx_nickname">姓名</string>
    <string name="tx_job">职位</string>
    <string name="tx_firm">公司</string>
    <string name="tx_info">简介</string>
    <string name="tx_blog_address">个人博客地址</string>

    <!-- ArticleCountFragment -->
    <string name="article_count_title">文章数据统计</string>
    <string name="tx_article_count">原创%1$s篇 \u2022 分享%2$s篇</string>
    <string name="tx_collect_count">获得收藏数</string>
    <string name="tx_read_count">获得阅读数</string>
    <string name="tx_comment_count">获得评论数</string>

    <!-- TrendsFragment -->


    <!-- LoginFragment -->
    <string name="hint_phone_email">邮箱/手机号</string>
    <string name="hint_pwd">密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_forget_pwd">忘记密码?</string>
    <string name="btn_register_hint">注册账号</string>
    <string name="tx_other_login_type">其他登陆方式</string>
    <string name="hint_logo">掘金 - juejin.im</string>
    <string name="tx_cbox">已阅读并同意</string>
    <string name="tx_protocol">软件许可服务协议</string>
    <string name="hint_user_null">请填写手机号或邮箱</string>
    <string name="hint_user_error">请输入正确的手机号或邮箱</string>
    <string name="hint_pwd_null">请输入密码</string>

    <!-- RegisterFragment -->
    <string name="hint_nickname">昵称</string>
    <string name="btn_register">注册</string>


    <!-- ForgetPwdFragment -->
    <string name="forget_pwd_title">重置密码</string>
    <string name="forget_pwd_tab_phone">手机找回</string>
    <string name="forget_pwd_tab_email">邮箱找回</string>
    <string name="forget_pwd_phone_hint">输入已绑定的手机号</string>
    <string name="forget_pwd_email_hint">输入已绑定的邮箱</string>
    <string name="tx_phone">手机号</string>
    <string name="hint_img_verify_code">图片验证码</string>
    <string name="hint_message_verify_code">短信验证码</string>
    <string name="btn_get_verify_code">获取验证码</string>
    <string name="tx_new_pwd">新密码</string>
    <string name="tx_email">邮箱</string>
    <string name="btn_commit_email">发送重置密码邮件</string>
    <string name="btn_back_login_page">回到登陆页</string>

    <!-- SetFragment -->
    <string name="set_tx_phone">手机</string>
    <string name="set_tx_email">邮箱</string>
    <string name="set_tx_pwd">修改账户密码</string>
    <string name="set_tx_bind_weibo">绑定微博</string>
    <string name="set_tx_bind_wechat">绑定微信</string>
    <string name="set_tx_bind_github">绑定Github</string>
    <string name="set_tx_clear_cache">清理缓存</string>
    <string name="set_tx_msg_notify">设置新消息通知</string>
    <string name="set_tx_exit_login">退出登陆</string>

    <!-- EditEmailFragment -->
    <string name="btn_bind_email">发送绑定邮箱</string>
    <string name="hint_new_email">新邮箱地址</string>

    <!-- EditPwdFragment -->
    <string name="hint_old_pwd">旧密码</string>
    <string name="hint_new_pwd">新密码</string>

    <!-- CollectFragment -->
    <string name="collect_tab_mime_create">我创建的</string>
    <string name="collect_tab_mime_follow">我关注的</string>

    <!-- CreateCollectFragment -->
    <string name="create_collect_title">新建收藏集</string>
    <string name="btn_create">创建</string>
    <string name="hint_collect_name">名称</string>
    <string name="hint_collect_info">描述（可选）</string>
    <string name="tx_collect_bg">上传收藏集背景图片</string>
    <string name="tx_collect_bg_hint">仅支持jpg、jpeg和png格式的图片</string>

</resources>
