<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/clr_white">

    <include layout="@layout/layout_toolbar"/>

    <ImageView
        android:layout_width="@dimen/dp_72"
        android:layout_height="@dimen/dp_72"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="@dimen/dp_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_24">

        <include layout="@layout/layout_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dp_24"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_register_user"
                style="@style/CommonEditView"
                android:hint="@string/hint_phone_email"/>

            <include layout="@layout/layout_line"/>

            <EditText
                android:id="@+id/et_register_pwd"
                style="@style/CommonEditView"
                android:hint="@string/hint_pwd"/>

            <include layout="@layout/layout_line"/>

            <EditText
                android:id="@+id/et_register_nickname"
                style="@style/CommonEditView"
                android:hint="@string/hint_nickname"/>

        </LinearLayout>

        <include layout="@layout/layout_line"/>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_register"
        style="@style/CommonButton"
        android:text="@string/btn_register"/>

</LinearLayout>