<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dp_24">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd_email_hint"
        android:textSize="@dimen/sp_12"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_12"/>

    <include layout="@layout/layout_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_12"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_forget_phone"
            style="@style/CommonEditView"
            android:hint="@string/tx_phone" />

        <include layout="@layout/layout_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dp_12"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_img_verify_code"
                style="@style/CommonEditView"
                android:hint="@string/hint_img_verify_code"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/img_verify_code"
                android:layout_width="@dimen/dp_72"
                android:layout_height="@dimen/dp_30"
                android:src="@color/clr_72777b"/>

        </LinearLayout>

        <include layout="@layout/layout_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dp_12"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_msg_verify_code"
                style="@style/CommonEditView"
                android:hint="@string/hint_message_verify_code"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/btn_msg_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/clr_3780f7"
                android:text="@string/btn_get_verify_code"/>

        </LinearLayout>

        <include layout="@layout/layout_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/dp_24">

            <EditText
                android:id="@+id/et_new_pwd"
                style="@style/CommonEditView"
                android:hint="@string/tx_new_pwd"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/btn_show_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fragmentation_ic_right"/>

        </LinearLayout>

        <include layout="@layout/layout_line"/>

    </LinearLayout>

    <include layout="@layout/layout_line"/>

    <TextView
        android:id="@+id/btn_commit_phone"
        style="@style/CommonButton"
        android:text="@string/btn_confirm" />

</LinearLayout>