<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_common_bg">

    <include layout="@layout/layout_toolbar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/clr_common_line"
        android:layout_marginTop="@dimen/dp_12"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/clr_white"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_8">

        <EditText
            android:id="@+id/et_collect_title"
            style="@style/CommonEditView"
            android:textColorHint="@color/clr_72777b"
            android:hint="@string/hint_collect_name"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:layout_gravity="bottom"
            android:textSize="@dimen/sp_10"
            android:layout_marginBottom="@dimen/dp_2"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/clr_common_line"
        android:layout_marginStart="@dimen/dp_16"/>

    <EditText
        android:id="@+id/et_collect_info"
        style="@style/CommonEditView"
        android:background="@color/clr_white"
        android:layout_height="@dimen/dp_56"
        android:hint="@string/hint_collect_info"
        android:textColorHint="@color/clr_72777b"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_6"
        android:gravity="top"/>

    <include layout="@layout/layout_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clr_white"
        android:layout_marginTop="@dimen/dp_12"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_12">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tx_collect_bg"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/clr_black" />

        <ImageView
            android:id="@+id/iv_collect_bg"
            android:layout_width="@dimen/dp_36"
            android:layout_height="@dimen/dp_36"
            android:src="@color/clr_common_line"/>

    </LinearLayout>

    <include layout="@layout/layout_line"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_collect_bg_hint"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/clr_black"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginStart="@dimen/dp_12" />

</LinearLayout>